Fixed spacing issue on blog post Temporarily disable author google link

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,7 +211,6 @@ ba {
 
 /* Blog Tags */
 bt {
-	font-size: 12px;
 }
 
 bt a:after {
